--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,8 +5,10 @@
 commons-math3 = "3.6.1"
 guava = "33.3.1-jre"
 junit-jupiter = "5.11.1"
+reactor = "3.5.0"
 
 [libraries]
+reactor-core = { group = "io.projectreactor", name = "reactor-core", version.ref = "reactor" }
 commons-math3 = { module = "org.apache.commons:commons-math3", version.ref = "commons-math3" }
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
